# cross_game_py

./: .flake8  .gitignore  README.md  mac_icon.icns  pyproject.toml  setup.cfg
crossgame/: main.py
crossgame/ai/: base_ai.py
crossgame/api/: api_dto.py  controller.py  lang_provider.py  persistance.py  player.py
crossgame/exceptions/: game_exceptions.py
crossgame/logic/: game.py  game_enums.py  state.py
crossgameflask/: flask_app.py  flask_app_config.py
crossgameflask/application/configurations/: game_config.py
crossgameflask/application/controllers/: controller_game.py  controller_index.py
crossgameflask/application/controllers/helpers/: form_attributes.py  helper_dtos.py  utils.py
crossgameflask/application/errors/: error_handlers.py  exceptions.py
crossgameflask/templates/: base_template.html  error_base.html
crossgameflask/templates/errors/: error_404.html  error_500.html
crossgameflask/templates/game/: finish_game_page.html  game_field_page.html  wait_for_players_page.html
crossgameflask/templates/index/: index_page.html  join_game_page.html  new_game_page.html
crossgameqt/: qtapp.py
crossgameqt/qtwidgets/: qt_main_app.py  qt_widget_control.py  qt_widget_field.py
crossgameui/: app.py  constants.py  w_base.py  w_field.py  w_main_window.py  w_menu.py
game_resources/lang/: langs.ini
resources/lang/: langs.ini
tests/api/: test_controller.py
tests/logic/: test_game.py  test_state.py
